# bolt-native-macros

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: main.yml
bolt_native_macros/: plugin.py  typing.py
examples/basic/: beet.yml  foo.mcfunction
src/bolt_native_macros/: __init__.py  codegen.py  patches.py  serialize.py
tests/snapshots/examples__build_basic__0.data_pack/data/test/function/: foo.mcfunction
