[project]
name = "bolt-native-macros"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beet>=0.112.2",
    "bolt>=0.49.2",
    "mecha>=0.101.0",
]

[project.optional-dependencies]
bolt-expressions = [
    "bolt-expressions>=0.17.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "lectern>=0.34.0",
    "pytest>=9.0.2",
    "pytest-insta>=0.4.1",
    "python-semantic-release>=9.21.1",
]

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = ["bolt_native_macros/__init__.py:__version__"]
version_toml = "pyproject.toml:project.version"
major_on_zero = false
build_command = "uv build"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"